force-app/main/default/objects/Loan__c/Loan__c.object-meta.xml
<CustomObject>
    <description>Loan associated with a shared asset.</description>
    <label>Loan</label>
    <pluralLabel>Loans</pluralLabel>
    <nameField>
        <label>Loan Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>

    <fields>
        <fullName>Shared_Asset__c</fullName>
        <description>Asset for which this loan is taken.</description>
        <label>Shared Asset</label>
        <referenceTo>Shared_Asset__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>

    <fields>
        <fullName>Lender_Name__c</fullName>
        <description>Name of the lender/bank.</description>
        <label>Lender Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>

    <fields>
        <fullName>Principal_Amount__c</fullName>
        <description>Principal amount of the loan.</description>
        <label>Principal Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <required>true</required>
        <type>Currency</type>
    </fields>

    <fields>
        <fullName>Interest_Rate__c</fullName>
        <description>Interest rate (percentage per annum).</description>
        <label>Interest Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>

    <fields>
        <fullName>Tenure_Months__c</fullName>
        <description>Tenure of the loan in months.</description>
        <label>Tenure (Months)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>

    <fields>
        <fullName>EMI_Amount__c</fullName>
        <description>EMI amount for the loan.</description>
        <label>EMI Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>

    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Loan start date.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>

    <fields>
        <fullName>End_Date__c</fullName>
        <description>Loan end/maturity date.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>

    <fields>
        <fullName>Outstanding_Principal__c</fullName>
        <description>Outstanding principal amount.</description>
        <label>Outstanding Principal</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>

</CustomObject>