force-app/main/default/objects/Loan__c/fields/Outstanding_Principal__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Principal__c</fullName>
    <label>Outstanding Principal</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>