force-app/main/default/objects/Loan__c/fields/Principal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Principal_Amount__c</fullName>
    <label>Principal Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>