force-app/main/default/objects/Loan__c/fields/Shared_Asset__c.field-meta.xml
<CustomField>
    <fullName>Shared_Asset__c</fullName>
    <label>Shared Asset</label>
    <type>MasterDetail</type>
    <referenceTo>Shared_Asset__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>